# physiopy

./: Code_of_Conduct.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
_build/doctrees-readthedocs/: .buildinfo  api.html  bestpractice.html  bids.html  cli.html  conduct.html  contributing.html  contributorfile.html  genindex.html  heuristic.html  howto.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/doctrees-readthedocs/.doctrees/: api.doctree  bestpractice.doctree  bids.doctree  cli.doctree  conduct.doctree  contributing.doctree  contributorfile.doctree  heuristic.doctree  howto.doctree  index.doctree  installation.doctree  license.doctree
_build/doctrees-readthedocs/_modules/: index.html
_build/doctrees-readthedocs/_modules/phys2bids/: phys2bids.html  physio_obj.html
_build/doctrees-readthedocs/_modules/phys2bids/interfaces/: acq.html  txt.html
_build/doctrees-readthedocs/_static/: documentation_options.js
docs/phys2bids/: workflow.rst
docs/source/: conf.py  index.rst
physiopy/: _version.py
